--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -76,3 +76,58 @@ body .v-select {
 .nowrap {
   white-space: nowrap;
 }
+.well{
+  background-color: #f5f5f5;
+  border: 3px dotted #467fcf;
+  padding: 1em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.btn-quote {
+    background: #a780bf;
+    border-color: #8F6BA5;
+    color: #fff;
+}
+.well fieldset {
+    border: 1px solid #ccc!important;
+    clear: both;
+    margin: 1em 0;
+    padding: .5em;
+}
+.well .fieldset .form-control{
+  margin-bottom: 5px;
+}
+.well fieldset legend {
+    border-bottom: none;
+    color: #999;
+    font-size: 1.2em;
+    padding-left: .5em;
+    padding-right: .5em;
+    width: initial;
+    text-align: left;
+    margin-bottom: 0;
+}
+.form-control{
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+.pull-right{
+  float: right;
+}
+.glyphicon {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+form.quotes-form .table>thead>tr>th {
+  background: #467fcf;
+  text-shadow: -1px -1px 0 #8F6BA5;
+  color: #fff ;
+}
