--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -131,3 +131,29 @@ form.quotes-form .table>thead>tr>th {
   text-shadow: -1px -1px 0 #8F6BA5;
   color: #fff ;
 }
+.company-logo { height: 300px; width: 300px; overflow: hidden; padding-top: 10px; }
+.company-logo img { height: 300px; }
+#org-img img { width: 500px;}
+.grid{
+  list-style-type: none;
+  padding: 0;
+}
+.part-list {
+  border: 1px solid #ccc;
+  padding: 19px;
+  margin: 10px 0 10px 0;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+  min-height: 50px; 
+}
+.part-list .part-name {
+  font-weight: 500;
+  margin-bottom: 15px;
+  color: #1E976B;
+}
+.part-list .total-price .h-total-price {
+  display: inline;
+}
+.part-list .total-price span{
+  display: inline;
+}
