--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -170,9 +170,28 @@ form.quotes-form .table>thead>tr>th {
   margin: 10px 0 10px 0;
   background-color: #f5f5f5;
   border-radius: 4px;
-  min-height: 130px;
 }
-.client-content {
+.user-list h4 {
+  word-break: break-word;
+}
+.user-list p {
+  word-break: break-all;
+}
+.search-content {
   max-height: 500px;
   overflow-y: auto;
 }
+.select-client {
+  display: inline-block;
+}
+// ::-webkit-scrollbar {
+//     width: 12px;
+// }
+// ::-webkit-scrollbar-track {
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+//     border-radius: 10px;
+// }
+// ::-webkit-scrollbar-thumb {
+//     border-radius: 10px;
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+// }
