--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -131,8 +131,7 @@ form.quotes-form .table>thead>tr>th {
   text-shadow: -1px -1px 0 #8F6BA5;
   color: #fff ;
 }
-.company-logo { height: 300px; width: 300px; overflow: hidden; padding-top: 10px; }
-.company-logo img { height: 300px; }
+.company-logo {width: 300px; overflow: hidden; padding-top: 10px; }
 #org-img img { width: 500px;}
 .grid{
   list-style-type: none;
