--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -284,7 +284,10 @@ form.invoices-form .table > thead > tr > th {
     font-size: 1.2em !important;
   }
   @page {
-    margin: 2cm 1cm 7cm 1cm;
+    margin: 2cm;
+  }
+  .pagebreak {
+    page-break-inside: avoid;
   }
 }
 .my-table th, .my-table td {
@@ -331,6 +334,7 @@ line-height: 0.4;
 }
 #quotes-view {
   font-size: 12px;
+  page-break-inside: avoid;
 }
 #jobPartsTableDivShow {
   table {
