--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -274,6 +274,9 @@ form.invoices-form .table > thead > tr > th {
       left: 0;
       top: 0;
     }
+    table.table-invoice-total th {
+      margin-bottom: 1rem;
+    }
   // .action{
   //     display: flex;
   //     align-items: center !important;
