--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -241,58 +241,6 @@ form.invoices-form .table > thead > tr > th {
 //     border-radius: 10px;
 //     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 // }
-
-@media print {
-* {
-    -webkit-print-color-adjust: exact !important; /*Chrome, Safari */
-    color-adjust: exact !important;  /*Firefox*/
-  }
-  #hidedownload{
-    display: none;
-  }
-  #hideprint{
-    display: none;
-  }
-  #hideback{
-    display: none;
-  }
-
-  .thead-show th {
-    background: #303030 !important;
-    text-shadow: none;
-    color: #fff !important;
-  }
-
-  body * {
-      visibility: hidden;
-    }
-    #Invoices-view, #quotes-view, #quotes-view *,  #Invoices-view * {
-      visibility: visible;
-    }
-    #Invoices-view, #quotes-view {
-      position: absolute;
-      left: 0;
-      top: 0;
-    }
-    table.table-invoice-total th {
-      margin-bottom: 1rem;
-    }
-  // .action{
-  //     display: flex;
-  //     align-items: center !important;
-  //     justify-content: center !important;
-  //     height: 100vh !important;
-  // }
-  .texty{
-    font-size: 1.2em !important;
-  }
-  @page {
-    margin: 2cm;
-  }
-  .pagebreak {
-    page-break-inside: avoid;
-  }
-}
 .my-table th, .my-table td {
   padding: 0.15rem !important;
 }
@@ -361,3 +309,59 @@ line-height: 0.4;
     }
   }
 }
+table#table-invoice-total th, table#table-invoice-total td {
+  padding: 4px;
+}
+/* PRINT MEDIA QUERIES */
+@media print {
+* {
+    -webkit-print-color-adjust: exact !important; /*Chrome, Safari */
+    color-adjust: exact !important;  /*Firefox*/
+  }
+  #hidedownload{
+    display: none;
+  }
+  #hideprint{
+    display: none;
+  }
+  #hideback{
+    display: none;
+  }
+
+  .thead-show th {
+    background: #303030 !important;
+    text-shadow: none;
+    color: #fff !important;
+  }
+  
+  body * {
+      visibility: hidden;
+    }
+    #Invoices-view, #quotes-view, #quotes-view *,  #Invoices-view * {
+      visibility: visible;
+    }
+    #Invoices-view, #quotes-view {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  // .action{
+  //     display: flex;
+  //     align-items: center !important;
+  //     justify-content: center !important;
+  //     height: 100vh !important;
+  // }
+  .texty{
+    font-size: 1.2em !important;
+  }
+  @page {
+    margin: 2cm;
+  }
+  #viewport {
+    page-break-inside: avoid;
+  }
+  .pagebreak {
+    page-break-inside: avoid;
+  }
+}
+/* PRINT MEDIA QUERIES */
