--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -131,7 +131,17 @@ form.quotes-form .table>thead>tr>th {
   text-shadow: -1px -1px 0 #8F6BA5;
   color: #fff ;
 }
-.company-logo {width: 300px; overflow: hidden; padding-top: 10px; }
+.company-logo {
+  width: 300px;
+  overflow: hidden;
+  padding-top: 10px;
+  img {
+    width: 250px;
+    height: 250px;
+    border: 1px solid #dedede;
+    padding: 4px;
+  }
+}
 #org-img img { width: 500px;}
 .grid{
   list-style-type: none;
