--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -143,7 +143,7 @@ form.quotes-form .table>thead>tr>th {
   margin: 10px 0 10px 0;
   background-color: #f5f5f5;
   border-radius: 4px;
-  min-height: 50px; 
+  min-height: 50px;
 }
 .part-list .part-name {
   font-weight: 500;
@@ -211,7 +211,7 @@ form.quotes-form .table>thead>tr>th {
   margin-top: 30px;
 }
 .btn-show {
-  margin-left:10px; 
+  margin-left:10px;
 }
 form.invoices-form .table > thead > tr > th {
     background: #24b37e;
@@ -234,30 +234,38 @@ form.invoices-form .table > thead > tr > th {
 //     width: 12px;
 // }
 // ::-webkit-scrollbar-track {
-//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 //     border-radius: 10px;
 // }
 // ::-webkit-scrollbar-thumb {
 //     border-radius: 10px;
-//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 // }
 .my-table th, .my-table td {
   padding: 0.15rem !important;
 }
 #manage{
-    border: 1px 
+    border: 1px
     solid rgb(204, 204, 204);
     height: 165px;
     width: 450px;
     padding-right: 1px;
 }
 #right{
-    border: 1px 
+    border: 1px
     solid rgb(204, 204, 204);
     height: 165px;
     width: 450px;
     padding-left: 1px;
     text-align: right;
+}
+#box_right{
+  border: 1px solid #cccccc;
+    height: 165px;
+}
+
+.box_text{
+  text-align: right;
 }
 #sideline{
     border-collapse: collapse;
@@ -291,13 +299,13 @@ line-height: 0.4;
   table {
     tr {
       th {
-       padding: 2px 10px;   
+       padding: 2px 10px;
       }
       td {
         h3 {
           margin: 0;
         }
-       padding: 2px 10px;   
+       padding: 2px 10px;
       }
     }
     thead {
@@ -333,7 +341,7 @@ table#table-invoice-total th, table#table-invoice-total td {
     text-shadow: none;
     color: #fff !important;
   }
-  
+
   body * {
       visibility: hidden;
     }
