--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -330,6 +330,11 @@ line-height: 0.4;
 table#table-invoice-total th, table#table-invoice-total td {
   padding: 4px;
 }
+.ageing-report {
+  .invoice-status {
+    text-transform: capitalize;
+  }
+}
 /* PRINT MEDIA QUERIES */
 @media print {
 * {
