--- a/resources/sass/backend/app.scss
+++ b/resources/sass/backend/app.scss
@@ -439,3 +439,7 @@ table#table-invoice-total th, table#table-invoice-total td {
   box-shadow: 1px 1px 6px 2px #8e321aa1
 }
 /* PRINT MEDIA QUERIES */
+
+.blueimp-gallery-display {
+  display: none;
+}
